syntax = "proto3";

package common;
option go_package = "/v1/proto/user";

service User {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}

// Register
message RegisterUserRequest {
    string id = 1;
    string Name = 2;
    string Email =  4;
    string Password =  5;
}

message RegisterUserResponse {
    string id = 1;
}

// Login
message LoginUserRequest {
    string id = 1;
    string Email =  2;
    string Password =  3;
}

message LoginUserResponse {
    string id = 1;
    string Email = 2;
    string Token = 3;
}

